fixed flickering while draging files

--- a/src/app/_components/home/home.component.scss
+++ b/src/app/_components/home/home.component.scss
@@ -21,6 +21,9 @@
 
 .dropZone.activeDrag {
     background-color: #555;
+    .info {
+        display: none;
+    }
     &:before {
         content: "Drop your file(s) here";
         position: relative;
